# digital_image_processing_sem10

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
images/homework/input/: paper_note.tif  paper_page2.tif
images/homework/output/: 3_blocks.json  3_restore.json  paper_note_blocks.json  paper_note_restore.json  paper_page2_blocks.json  paper_page2_restore.json
images/lab01/output/: bnw_glcm_dr0_dc1.json  bnw_noise_var100_psnr.json  bnw_stats.json  dog_glcm_dr0_dc1.json  dog_noise_var225_psnr.json  dog_stats.json  flat_histogram_gradient_512x512_glcm_dr0_dc1.json  flat_histogram_gradient_512x512_noise_var400_psnr.json  flat_histogram_gradient_512x512_stats.json  flower_glcm_dr0_dc1.json  flower_noise_var900_psnr.json  flower_stats.json  imagesample_glcm_dr0_dc1.json  imagesample_noise_var1600_psnr.json  imagesample_stats.json
images/lab02/input/: impulse.txt  ramp.txt  signal.txt  sine_4_cycles.txt  sine_mix.txt  square_wave.txt  step_signal.txt  synthetic_sine_mix.txt
images/lab03/output/: arch_rotation_comparison_30.json  arch_rotation_comparison_m45.json  bnw_rotation_comparison_30.json  bnw_rotation_comparison_m45.json  flower_rotation_comparison_30.json  flower_rotation_comparison_m45.json  imagesample_rotation_comparison_30.json  imagesample_rotation_comparison_m45.json  interpolation_visual_comparison.txt  pixel_art_invader_rotation_comparison_30.json  pixel_art_invader_rotation_comparison_m45.json  stone_rotation_comparison_30.json  stone_rotation_comparison_m45.json
images/lab04/input/kernels/: box_blur_3x3.txt  sharpen_5x5.txt
images/lab04/output/: bnw_gaussian_var400_lowpass_3x3_psnr.json  bnw_gaussian_var400_threshold_lowpass_3x3_t20_psnr.json  bnw_impulse_p005_lowpass_3x3_psnr.json  bnw_impulse_p005_threshold_lowpass_3x3_t20_psnr.json  bnw_zero_crossing_log_11x11_sigma2p4.json  bnw_zero_crossing_log_7x7_sigma1p4.json  filter_quality_comparison.txt  flower_gaussian_var900_lowpass_3x3_psnr.json  flower_gaussian_var900_threshold_lowpass_3x3_t20_psnr.json  flower_impulse_p004_lowpass_3x3_psnr.json  flower_impulse_p004_threshold_lowpass_3x3_t20_psnr.json  flower_zero_crossing_log_11x11_sigma2p4.json  flower_zero_crossing_log_7x7_sigma1p4.json  imagesample_gaussian_var625_lowpass_3x3_psnr.json  imagesample_gaussian_var625_threshold_lowpass_3x3_t20_psnr.json  imagesample_impulse_p006_lowpass_3x3_psnr.json  imagesample_impulse_p006_threshold_lowpass_3x3_t20_psnr.json  imagesample_zero_crossing_log_11x11_sigma2p4.json  imagesample_zero_crossing_log_7x7_sigma1p4.json  pixel_art_invader_gaussian_var225_lowpass_3x3_psnr.json  pixel_art_invader_gaussian_var225_threshold_lowpass_3x3_t20_psnr.json  pixel_art_invader_impulse_p010_lowpass_3x3_psnr.json  pixel_art_invader_impulse_p010_threshold_lowpass_3x3_t20_psnr.json  pixel_art_invader_zero_crossing_log_11x11_sigma2p4.json  pixel_art_invader_zero_crossing_log_7x7_sigma1p4.json
images/lab05/input/morphology/: block_with_holes.pgm  connected_blobs.pgm  thin_lines.pgm
images/lab05/output/: bnw_gaussian_var400_median_vs_trimmed_mean_full_3x3_psnr.json  bnw_impulse_p005_median_vs_trimmed_mean_full_3x3_psnr.json  dog_gaussian_var625_median_vs_trimmed_mean_full_3x3_psnr.json  dog_impulse_p006_median_vs_trimmed_mean_full_3x3_psnr.json  imagesample_gaussian_var625_median_vs_trimmed_mean_full_3x3_psnr.json  imagesample_impulse_p006_median_vs_trimmed_mean_full_3x3_psnr.json  nonlinear_filter_quality_comparison.txt  pixel_art_invader_gaussian_var225_median_vs_trimmed_mean_full_3x3_psnr.json  pixel_art_invader_impulse_p010_median_vs_trimmed_mean_full_3x3_psnr.json
images/lab06/input/components/: diagonal_chains_4conn.pgm  geometric_shapes.pgm  simple_regions.pgm  thin_bridges.pgm
images/lab06/output/: ball_otsu.json  diagonal_chains_4conn_components.json  geometric_shapes_components.json  geometric_shapes_large_circles.json  metal_otsu.json  pixel_art_invader_otsu.json  simple_regions_components.json  stone_otsu.json  thin_bridges_components.json
lab1/: CMakeLists.txt
scripts/: build.sh  run_all_examples.sh
src/app/: cli.cpp  cli.hpp  main.cpp
src/core/: gray_image.cpp  gray_image.hpp  image_io.cpp  image_io.hpp
src/homework/: block_classifier.cpp  block_classifier.hpp  halftone_pipeline.cpp  halftone_pipeline.hpp  tiff_reader.cpp  tiff_reader.hpp
src/lab01_analysis/: cooccurrence.cpp  cooccurrence.hpp  histogram.cpp  histogram.hpp  noise.cpp  noise.hpp  quality.cpp  quality.hpp  statistics.cpp  statistics.hpp
src/lab02_fourier/: fft.cpp  fft.hpp
src/lab03_geometry/: rotation.cpp  rotation.hpp
src/lab04_convolution/: convolution.cpp  convolution.hpp  high_pass.cpp  high_pass.hpp  low_pass.cpp  low_pass.hpp
src/lab05_nonlinear/: morphology.cpp  morphology.hpp  rank_filter.cpp  rank_filter.hpp
src/lab06_segmentation/: connected_components.cpp  connected_components.hpp  otsu.cpp  otsu.hpp
